# count-hours

./: CHANGELOG.md  README.md  count-hours.cabal  flake.nix
app/: Main.hs
src/: MyLib.hs
