cabal-version:      2.4
name:               count-hours
version:            0.1.0.0
author:             Viktor Kronvall
maintainer:         viktor.kronvall@gmail.com
extra-source-files: CHANGELOG.md

library
  exposed-modules:  MyLib
  build-depends:
    , base
    , bytestring
    , cassava
    , containers
    , text
    , time

  hs-source-dirs:   src
  default-language: Haskell2010

executable count-hours
  main-is:          Main.hs
  build-depends:
    , base
    , count-hours

  hs-source-dirs:   app
  default-language: Haskell2010
